--- a/app/views/years/_overview.html.erb
+++ b/app/views/years/_overview.html.erb
@@ -10,6 +10,6 @@
 		<p><small>*Tax rate and estimates are conservative and independent of expenses and discounts.</small></p>
 	</div>
 	<div class="year-overview-chart">
-		<div class="chart-wrap overview-chart-wrap"><%= column_chart chart_year_all_data_path(@year.id), id: 'year-all-chart', days_in_year: @year.days_in_year, days_elapsed: @year.days_elapsed %></div>
+		<div class="chart-wrap overview-chart-wrap"><%= column_chart chart_year_all_data_path(@year.id), id: 'year-all-chart', days_in_year: @year.days_in_year, days_elapsed: @year.days_elapsed, yearly_goal: @year.goal_year %></div>
 	</div>
 </div>
