--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -26,6 +26,14 @@
 	<p><strong>Invoice ID<% if user_signed_in? %> Display<% end %>:</strong> <%= @invoice.display_id %></p>
 	<p><strong>Date Issued:</strong> <%= @invoice.date.to_formatted_s(:long) %></p>
 	<p><% if @invoice.paid == true %><%= icon('fas', 'check', class: 'green') %> <span class="spread green">Paid</span> on <%= @invoice.paiddate.to_formatted_s(:long) %><% else %><%= icon('fas', 'exclamation', class: 'red') %> <span class="spread red">Not Paid</span><% end %></p>
+	<% if user_signed_in? and !@clientView %>
+	<% if @invoice.stripe_card_session_id %>
+	<p><strong>Stripe Card Session:</strong> <%= @invoice.stripe_card_session_id %></p>
+	<% end %>
+	<% if @invoice.stripe_bank_session_id %>
+	<p><strong>Stripe Bank Session:</strong> <%= @invoice.stripe_bank_session_id %></p>
+	<% end %>
+	<% end %>
 	<% if !@invoice.paymenttype.blank? %>
 	<p><strong>Payment Method:</strong> <%= @invoice.paymenttype %></p>
 	<% end %>
