If no paid date

--- a/app/views/invoices/show.pdf.erb
+++ b/app/views/invoices/show.pdf.erb
@@ -10,7 +10,7 @@
 					<p><%= @invoice.date.to_formatted_s(:long) %></p>
 					<p><strong>Invoice ID:</strong> <%= @invoice.display_id %></p>
 					<% if @invoice.paid %>
-					<p><strong>Status:</strong> <span class="spread green">Paid</span> on <%= @invoice.paiddate.to_formatted_s(:long) %></p>
+					<p><strong>Status:</strong> <span class="spread green">Paid</span><% if @invoice.paiddate.present? %> on <%= @invoice.paiddate.to_formatted_s(:long) %><% end %></p>
 					<p><strong>Payment Method:</strong> <%= @invoice.paymenttype %></p>
 					<% else %>
 					<p><strong>Status:</strong> <span class="spread red">Not Paid</span></p>
