--- a/app/views/welcome/payment.html.erb
+++ b/app/views/welcome/payment.html.erb
@@ -3,6 +3,6 @@
 	<h1><%= company[:full_name] %><br>Payment Options</h1>
 </div>
 <div class="panel">
-	<p class="text-center">For electronic payments, please see your individual invoice email. All payment options are summarized below:</p>
+	<p class="text-center">For electronic or credit card payments, please see your individual invoice email. All payment options are summarized below:</p>
 	<%= render 'invoices/payment-options' %>
 </div>
